# wow-wtf-cleaner

./: .gitignore  README.md  WoW-WTF-Cleaner.spec  pyproject.toml
tests/: test_formatting.py  test_mover.py  test_scanner.py  test_toc.py
wow_wtf_cleaner/: __init__.py  __main__.py  config.py  gui.py  i18n.py
wow_wtf_cleaner/core/: __init__.py  formatting.py  models.py  mover.py  scanner.py  toc.py
